Added lombok and refactor old code structure