@@ -1,6 +1,6 @@
 package net.kalbskinder.patientZero.systems;
 
-import net.kalbskinder.patientZero.PatientZero;
+import lombok.RequiredArgsConstructor;
 import net.kalbskinder.patientZero.utils.MMUtils;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
@@ -13,25 +13,23 @@ import java.util.List;
 import java.util.Map;
 import java.util.logging.Logger;
 
+@RequiredArgsConstructor
 public class TeleportPlayers {
-    private static FileConfiguration config;
-    private static Logger logger = Logger.getLogger("PTZ");
+    private final FileConfiguration config;
+    private final QueueManager queueManager;
 
-    // Get config from plugin instance
-    public static void register(PatientZero plugin) {
-        config = plugin.getConfig();
-    }
+    private static final Logger LOGGER = Logger.getLogger("PTZ");
 
     // Reads the possible random locations from the config file
-    public static void teleportPlayersOnGameStart(QueueInfo queue) {
+    public void teleportPlayersOnGameStart(QueueInfo queue) {
         if (queue == null || queue.getPlayers().isEmpty()) {
-            logger.warning("Queue is null or has no players");
+            LOGGER.warning("Queue is null or has no players");
             return;
         }
 
-        String map = QueueManager.getMapOfPlayer(queue.getPlayers().get(0)); // Get the map name by the first player
+        String map = queueManager.getMapOfPlayer(queue.getPlayers().getFirst()); // Get the map name by the first player
         if (map == null) {
-            logger.warning("Map name is null for player: " + queue.getPlayers().get(0).getName());
+            LOGGER.warning("Map name is null for player: " + queue.getPlayers().getFirst().getName());
             return;
         }
 
@@ -45,7 +43,7 @@ public class TeleportPlayers {
         // Check if there are spawn locations configured for the map
         // This can be done by using the in game command '/ptz addspawn <map-name> <role>'
         if (locations.isEmpty()) {
-            logger.warning("No spawn locations available for map: " + map);
+            LOGGER.warning("No spawn locations available for map: " + map);
             queue.getPlayers().forEach(player -> { MMUtils.sendMessage(player, "<red>No spawn locations found! You can configure them by using '/ptz addspawn <map-name> <role>'. For more information type '/ptz help'"); });
             return;
         }
@@ -55,13 +53,13 @@ public class TeleportPlayers {
     }
 
     // Read each possible location and map it to a new list
-    private static List<Location> loadSpawnLocations(String path, String sectionName) {
+    private List<Location> loadSpawnLocations(String path, String sectionName) {
         List<Location> locations = new ArrayList<>();
         List<Map<?, ?>> spawnList = config.getMapList(path);
 
         // Make sure that the config returned valid sections
-        if (spawnList == null || spawnList.isEmpty()) {
-            logger.warning("Spawn list is null or empty for " + sectionName + " at path: " + path);
+        if (spawnList.isEmpty()) {
+            LOGGER.warning("Spawn list is null or empty for " + sectionName + " at path: " + path);
             return locations;
         }
 
@@ -69,13 +67,13 @@ public class TeleportPlayers {
             Map<?, ?> spawn = spawnList.get(i);
             String worldName = (String) spawn.get("world");
             if (worldName == null) {
-                logger.warning("World name is null for spawn entry " + i + " in " + sectionName);
+                LOGGER.warning("World name is null for spawn entry " + i + " in " + sectionName);
                 continue;
             }
 
             World world = Bukkit.getWorld(worldName);
             if (world == null) {
-                logger.warning("World not found: " + worldName);
+                LOGGER.warning("World not found: " + worldName);
                 continue;
             }
 
@@ -89,7 +87,7 @@ public class TeleportPlayers {
                 Location loc = new Location(world, x, y, z, yaw, pitch);
                 locations.add(loc);
             } catch (Exception e) {
-                logger.warning("Invalid spawn format at index " + i + ": " + e.getMessage());
+                LOGGER.warning("Invalid spawn format at index " + i + ": " + e.getMessage());
             }
         }
 
@@ -98,9 +96,9 @@ public class TeleportPlayers {
 
 
     // Teleport each player to a random location
-    public static void teleportPlayersToRandomLocations(List<Player> players, List<Location> locations) {
+    public void teleportPlayersToRandomLocations(List<Player> players, List<Location> locations) {
         if (players == null || locations == null || players.isEmpty() || locations.isEmpty()) {
-            logger.warning("Players or locations list is empty or null");
+            LOGGER.warning("Players or locations list is empty or null");
             return;
         }
 
@@ -108,7 +106,7 @@ public class TeleportPlayers {
         for (Player player : players) {
             // Skip offline players
             if (!player.isOnline()) {
-                logger.warning("Player " + player.getName() + " is offline, skipping teleport");
+                LOGGER.warning("Player " + player.getName() + " is offline, skipping teleport");
                 continue;
             }
 
@@ -116,25 +114,24 @@ public class TeleportPlayers {
             int randomIndex = (int) (Math.random() * locations.size());
             Location targetLocation = locations.get(randomIndex);
             if (!player.teleport(targetLocation)) {
-                logger.warning("Failed to teleport player " + player.getName() + " to: " + targetLocation);
+                LOGGER.warning("Failed to teleport player " + player.getName() + " to: " + targetLocation);
                 MMUtils.sendMessage(player, "<red>Teleportation failed! Please contact a staff member!");
             }
         }
     }
 
     // Teleports a player to a random defined corrupted spawn location
-    public static void teleportPlayerToCorruptedLocations(Player player) {
-        List<Location> locations = new ArrayList<>();
+    public void teleportPlayerToCorruptedLocations(Player player) {
         List<Player> players = new ArrayList<>();
         players.add(player);
 
-        String mapName = QueueManager.getMapOfPlayer(player);
+        String mapName = queueManager.getMapOfPlayer(player);
 
         // Get the spawnpoints
-        locations.addAll(loadSpawnLocations("maps." + mapName + ".spawns.corrupted", "corrupted"));
+        List<Location> locations = new ArrayList<>(loadSpawnLocations("maps." + mapName + ".spawns.corrupted", "corrupted"));
 
         if (locations.isEmpty()) {
-            logger.warning("No spawn locations available for map: " + mapName);
+            LOGGER.warning("No spawn locations available for map: " + mapName);
             return;
         }
 
